# engineering_robot

./: .gitignore  Readme.md  build.sh  project _dev.repos  project.repos
core/engineering_control/: Readme.md
core/engineering_control/engineering_resolve/: CMakeLists.txt  package.xml
core/engineering_control/engineering_resolve/config/: config.yaml
core/engineering_control/engineering_resolve/include/engineering_resolve/: engineering_resolve.hpp
core/engineering_control/engineering_resolve/launch/: launch.py  launch_controll.py
core/engineering_control/engineering_resolve/meshes/: Mine.STL  RedeemBox.STL
core/engineering_control/engineering_resolve/src/: command_spub.cpp  exchange_mine.cpp  main.cpp  multithread_solove.cpp  resolving_node.cpp  robot_controller.cpp  utils.cpp
core/engineering_control/position_controller/: CMakeLists.txt  package.xml
core/engineering_control/position_controller/include/position_controller/: position_controller.hpp
core/engineering_control/position_controller/src/: main.cpp
core/interfaces/: Readme.md
core/interfaces/command_interfaces/: CMakeLists.txt  package.xml
core/interfaces/command_interfaces/msg/: ComputerState.msg  PlayerCommand.msg
core/robot_model/: .gitignore copy  README.md
core/robot_model/engineering_robot/: CMakeLists.txt  package.xml
core/robot_model/engineering_robot/meshes/: J1_link.STL  J2_link.STL  J3_link.STL  J4_link.STL  J5_z_link.STL  end_link.STL
core/robot_model/engineering_robot/urdf/: engineering_robot.csv  engineering_robot.urdf
core/robot_model/engineering_robot_hardware_interface/: CMakeLists.txt  engineering_robot_hardware_interface.xml  package.xml
core/robot_model/engineering_robot_hardware_interface/include/engineering_robot_hardware_interface/: crc.hpp  hardware_interface.hpp  packet.hpp
core/robot_model/engineering_robot_hardware_interface/src/: crc.cpp  hardware_interface.cpp
core/robot_model/engineering_robot_moveit/: .setup_assistant  CMakeLists.txt  Readme.md  package.xml
core/robot_model/engineering_robot_moveit/config/: engineering_robot.ros2_control.xacro  engineering_robot.srdf  engineering_robot.urdf.xacro  initial_positions.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  ompl_planning.yaml  ros2_controllers.yaml
core/robot_model/engineering_robot_moveit/launch/: demo.launch.py  launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  stomp_planning_pipeline.launch.xml  warehouse_db.launch.py
core/sencer_drivers/: README.md
core/sencer_drivers/sensordrivers/: CMakeLists.txt  package.xml
core/sencer_drivers/sensordrivers/config/: RealSenseconfig.yaml  config.yaml  mid360_config.json
core/sencer_drivers/sensordrivers/include/SensorDrivers/: Livoxmid360Driver.hpp  ObsoleteCamParams.h  RealSense.hpp
core/sencer_drivers/sensordrivers/launch/: launch_camera.py  launch_realsense.py
core/sencer_drivers/sensordrivers/src/: CameraDriver.cpp  Livoxmid360Driver.cpp  RealSenseDriver.cpp
core/target_redeem_box/: Readme.md
