<package format="3">
  <name>engineering_robot</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for my_robotic_arm</p>
    <p>This package contains configuration data, 3D models and launch files
for my_robotic_arm robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="183842220@qq.com" />
  <license>BSD</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>moveit_ros_move_group</exec_depend>
  <exec_depend>moveit_kinematics</exec_depend>
  <exec_depend>moveit_planners</exec_depend>
  <exec_depend>moveit_simple_controller_manager</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>



